--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -8,6 +8,7 @@ chardet==3.0.4
 colorama==0.4.4
 Django==3.0.5
 djangorestframework==3.11.0
+djangorestframework-simplejwt==4.4.0
 flake8==3.8.4
 idna==2.9
 importlib-metadata==1.6.0
@@ -20,6 +21,7 @@ pluggy==0.13.1
 py==1.8.1
 pycodestyle==2.6.0
 pyflakes==2.2.0
+PyJWT==1.7.1
 pylint==2.6.0
 pylint-django==2.3.0
 pylint-plugin-utils==0.6
