--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,4 @@ wcwidth==0.1.9            # via pytest
 zipp==3.1.0               # via importlib-metadata
 djangorestframework-simplejwt==4.4.0
 PyJWT==1.7.1
+django-cors-headers==3.5.0
