--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -7,6 +7,7 @@ certifi==2020.4.5.1
 chardet==3.0.4
 colorama==0.4.4
 Django==3.0.5
+django-cors-headers==3.5.0
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
 flake8==3.8.4
