--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,4 @@ zipp==3.1.0               # via importlib-metadata
 djangorestframework-simplejwt==4.4.0
 PyJWT==1.7.1
 django-cors-headers==3.5.0
+django-filter==2.4.0
